Added the Bedrock Entity Loader (#162)
Co-authored-by: Dan <danielbrande3@gmail.com>